<!-- TODO: Update blank fragment layout -->
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBackgroundColor"
    android:fillViewport="true"
    tools:ignore="Overdraw">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--android:layout_weight="1"-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="142dp"
                android:layout_height="84dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_launcher" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="17dp"
            android:layout_marginTop="47dp"
            android:fontFamily="@font/sf_pro_medium"
            android:text="@string/hello"
            android:textAllCaps="false"
            android:textColor="@color/textColorBlack"
            android:textSize="22sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="50dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/emailTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/email"
                    android:textColorHint="@color/ratingColor"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/edtTextEmailSignInView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:paddingTop="10dp"
                        android:textColor="@color/textColorBlack"
                        android:textColorHighlight="@color/textColorBlack"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="@dimen/text_size_new_form"
                        tools:ignore="LabelFor" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passWordTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/ratingColor"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/edtTextPasswordSignInView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:paddingTop="10dp"
                        android:textColor="@color/textColorBlack"
                        android:textColorHighlight="@color/textColorBlack"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="@dimen/text_size_new_form"
                        tools:ignore="LabelFor" />

                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:id="@+id/btnLoginView"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="70dp"
                    android:background="@drawable/bg_wallet_button_dark_accent"
                    android:gravity="center"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/textColorWhite"
                    android:textSize="@dimen/text_size_new_medium" />

                <TextView
                    android:id="@+id/textViewForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="31dp"
                    android:fontFamily="@font/sf_pro_regular"
                    android:gravity="center"
                    android:text="@string/forgot_password"
                    android:textColor="#8A8A8F"
                    android:textSize="@dimen/text_size_normal"
                    android:visibility="visible" />


            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/textViewSignUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/textColorWhite"
            android:textSize="@dimen/text_size_large"
            android:visibility="gone" />
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
