<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/pageColorWhite"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/sf_pro_medium"
            android:text="Register user"
            android:textColor="@color/black_effective"
            android:textSize="22sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/full_name"
            android:textColorHint="@color/ratingColor"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/edtTextFirstNameView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="@dimen/text_size_new_form" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phoneTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/mobile_number"
            android:textColorHint="@color/ratingColor"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/edtMobileNumberView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="@dimen/text_size_new_form" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/email_id"
            android:textColorHint="@color/ratingColor"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/edtTextEmailView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/text_size_new_form" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:textColorHint="@color/ratingColor"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/edtTextPasswordView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="@dimen/text_size_new_form" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/btnSignUpView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_wallet_button_dark_accent"
            android:gravity="center"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:textSize="15sp" />

    </LinearLayout>
</ScrollView>