<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBackgroundColor"
    android:fillViewport="true"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:logo="@drawable/ic_baseline_arrow_back" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="142dp"
                        android:layout_height="84dp"
                        android:contentDescription="@string/app_name"
                        android:src="@mipmap/ic_launcher" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textAllCaps="true"
                    android:textColor="@color/textColorBlack"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/txtForgotPasswordView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_pro_medium"
                        android:text="@string/forgot_password"
                        android:textColor="@color/textColorBlack"
                        android:textSize="@dimen/text_size_large" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/sf_pro_light"
                        android:lineSpacingExtra="10dp"
                        android:text="@string/label_forgot_password_auth_activity"
                        android:textColor="@color/textColorBlack"
                        android:textSize="@dimen/text_size_normal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal"
                    android:visibility="gone">


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:height="40dp"
                        android:hint="@string/email_id"
                        android:inputType="none" />
                    <!--</android.support.design.widget.TextInputLayout>-->

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="59dp"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/emailTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/ratingColor"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/edtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:fontFamily="@font/sf_pro_regular"
                            android:paddingTop="10dp"
                            android:textColor="@color/textColorBlack"
                            android:textColorHighlight="@color/textColor"
                            android:textCursorDrawable="@drawable/color_cursor"
                            android:textSize="17sp" />

                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/btnSendOtpView"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/bg_wallet_button_dark_accent"
                        android:gravity="center"
                        android:text="@string/submit"
                        android:textAllCaps="false"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/text_size_new_medium" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
